<resources>
    <string name="app_name" translatable="false">GeekBrainsWeather</string>
    <string name="enter_city_name">Enter city name:</string>
    <string name="humidity">Humidity</string>
    <string name="air_pressure">Air Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature">Temperature</string>
    <string name="city_info">City Info</string>
    <string name="check_weather">Check weather</string>
    <string name="available_cities">Available cities: Moscow, London, Paris.</string>
    <string name="city_info_Moscow">Moscow is the major political, economic, cultural, and scientific center
        of Russia and Eastern Europe, as well as the largest city (both by population and by area)
        entirely on the European continent. By broader definitions, Moscow is among the world\'s
        largest cities, being the 14th largest metro area, the 18th largest agglomeration, the 14th
        largest urban area, and the 11th largest by population within city limits worldwide.
        According to Forbes 2013, Moscow has been ranked as the ninth most expensive city in the
        world by Mercer and has one of the world\'s largest urban economies, being ranked as an alpha
        global city according to the Globalization and World Cities Research Network, and is also one
        of the fastest growing tourist destinations in the world according to the MasterCard Global
        Destination Cities Index.Moscow is the northernmost and coldest megacity on Earth.
        It is home to the Ostankino Tower, the
        tallest free standing structure in Europe; the Federation Tower, the second-tallest skyscraper
        in Europe; and the Moscow International Business Center. By its territorial expansion on
        July 1, 2012 southwest into the Moscow Oblast, the area of the capital more than doubled,
        going from 1,091 to 2,511 square kilometers (421 to 970 sq mi), resulting in Moscow becoming
        the largest city on the European continent by area; it also gained an additional population
        of 233,000 people.Moscow is situated on the Moskva River in the Central Federal
        District of European Russia, making it
        Europe\'s most populated inland city. The city is well known for its architecture,
        particularly its historic buildings such as Saint Basil\'s Cathedral in Russian architectural
        style with a richly decorated and multicolored facade. With over 40 percent of its
        territory covered by greenery, it is one of the greenest capitals and major cities in Europe
        and the world, having the largest forest in an urban area within its borders—more than any
        other major city—even before its expansion in 2012. The city has served as the capital of a
        progression of states, from the medieval Grand Duchy of Moscow and the subsequent Tsardom of
        Russia to the Russian Empire to the Soviet Union and the contemporary Russian Federation.</string>
    <string name="cityNameMoscow">Moscow</string>
    <string name="moscowTemperatureValue" translatable="false">+15 ℃</string>
    <string name="moscowHumidityValue" translatable="false">75 %</string>
    <string name="moscowPressureValue" translatable="false">1050 HPa</string>
    <string name="moscowWindSpeedValue" translatable="false">5 m/sec</string>
    <string name="londonCityName">London</string>
    <string name="londonTemperatureValue" translatable="false">+10 ℃</string>
    <string name="londonHumidityValue" translatable="false">87 %</string>
    <string name="londonPressureValue" translatable="false">1000 HPa</string>
    <string name="londonWindSpeed" translatable="false">15 m/sec</string>
    <string name="parisCityName">Paris</string>
    <string name="parisTemperatureValue" translatable="false">+25 ℃</string>
    <string name="parisHumidityValue" translatable="false">60 %</string>
    <string name="parisPressureValue" translatable="false">950 HPa</string>
    <string name="parisWindSpeedValue" translatable="false">10 m/sec</string>
    <string name="cityNotFound">City not found!</string>
    <string name="city_info_Paris">Paris (French pronunciation: ​[paʁi] (About this soundlisten)) is
        the capital and most populous city of France, with an area of 105 square kilometres
        (41 square miles) and an official estimated population of 2,140,526 residents as of
        1 January 2019. Since the 17th century, Paris has been one of Europe\'s major centres of
        finance, diplomacy, commerce, fashion, science, and the arts. The City of Paris is the centre
        and seat of government of the Île-de-France, or Paris Region, which has an estimated official
        2019 population of 12,213,364, or about 18 percent of the population of France. The Paris
        Region had a GDP of €709 billion ($808 billion) in 2017. According to the Economist
        Intelligence Unit Worldwide Cost of Living Survey in 2018, Paris was the second most
        expensive city in the world, after Singapore, and ahead of Zürich, Hong Kong, Oslo and Geneva.
        Another source ranked Paris as most expensive, on a par with Singapore and Hong Kong, in 2018.
        The city is a major railway, highway, and air-transport hub served by two international airports:
        Paris-Charles de Gaulle (the second busiest airport in Europe) and Paris-Orly. Opened
        in 1900, the city\'s subway system, the Paris Métro, serves 5.23 million passengers daily,
        and is the second busiest metro system in Europe after Moscow Metro. Gare du Nord is the 24th
        busiest railway station in the world, but the first located outside Japan, with 262 million
        passengers in 2015.
    </string>
    <string name="city_info_London">London is the capital and largest city of England and the
        United Kingdom. Standing on the River Thames in the south-east of England, at the
        head of its 50-mile (80 km) estuary leading to the North Sea, London has been a major
        settlement for two millennia. Londinium was founded by the Romans. The City of London,
        London\'s ancient core − an area of just 1.12 square miles (2.9 km2) and colloquially known
        as the Square Mile − retains boundaries that follow closely its medieval limits.
        The City of Westminster is also an Inner London borough holding city status. Greater London
        is governed by the Mayor of London and the London Assembly.
        London is considered to be one of the world\'s most important global cities and has been
        termed the world\'s most powerful, most desirable, most influential, most visited,
         most expensive, innovative, sustainable, most investment friendly,
        and most popular for work city in the world. London exerts a considerable impact upon
        the arts, commerce, education, entertainment, fashion, finance, healthcare, media, professional
        services, research and development, tourism and transportation. London ranks 26 out
        of 300 major cities for economic performance.It is one of the largest financial centres
         and has either the fifth or sixth largest metropolitan area GDP.
        It is the most-visited city as measured by international arrivalsand has the busiest city
        airport system as measured by passenger traffic. It is the leading investment destination,
         hosting more international retailers and ultra high-net-worth
        individuals than any other city. London\'s universities form the largest concentration
        of higher education institutes in Europe, and is home of world-class institutions such as
        Imperial College London in science, technology, engineering, and mathematics and the London
        School of Economics in economics, finance, and business. In 2012, London became
        the first city to have hosted three modern Summer Olympic Games.
    </string>
    <string name="empty_list" translatable="false">Emtpy list</string>
    <string name="forecast_3day_label">3-day forecast:</string>
    <string name="today_temperature_label">Today temperature:</string>


</resources>
