<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/cityNameInfo"
        android:layout_width="145dp"
        android:layout_height="31dp"
        android:layout_marginStart="44dp"
        android:gravity="bottom|start"
        android:text="@string/enter_city_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/enteredCityName"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cityNameInfo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/checkWeatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/check_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCityInfo" />

    <CheckBox
        android:id="@+id/checkBoxHumidity"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:checked="false"
        android:text="@string/humidity"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTemperature" />

    <CheckBox
        android:id="@+id/checkBoxAirPressure"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:text="@string/air_pressure"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxHumidity" />

    <CheckBox
        android:id="@+id/checkBoxWindSpeed"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:text="@string/wind_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAirPressure"
        tools:textAlignment="viewStart" />

    <CheckBox
        android:id="@+id/checkBoxTemperature"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_marginTop="88dp"
        android:text="@string/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableCities"
        tools:textAlignment="viewStart" />

    <CheckBox
        android:id="@+id/checkBoxCityInfo"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:text="@string/city_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxWindSpeed"
        tools:textAlignment="viewStart" />

    <TextView
        android:id="@+id/availableCities"
        android:layout_width="303dp"
        android:layout_height="35dp"
        android:text="@string/available_cities"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityNameInfo"
        app:layout_constraintVertical_bias="0.017" />

</androidx.constraintlayout.widget.ConstraintLayout>