<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EnterCityName">

    <TextView
        android:id="@+id/cityNameInfo_fragment"
        android:layout_width="145dp"
        android:layout_height="31dp"
        android:layout_marginTop="44dp"
        android:gravity="bottom|start"
        android:text="@string/enter_city_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkWeatherButton_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/check_weather"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableCities_fragment" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enteredCityName_fragment"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cityNameInfo_fragment"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/availableCities_fragment"
        android:layout_width="303dp"
        android:layout_height="35dp"
        android:text="@string/available_cities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityNameInfo_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>